--- a/01-vanilla-js/index.html
+++ b/01-vanilla-js/index.html
@@ -5,9 +5,14 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="main.css">
     <title>Vanilla JS</title>
 </head>
 <body>
-
+<div class="app">
+    <button id="my-button" onclick="changeButton('my-button')">Click me</button>
+    <button id="my-button-second" onclick="changeButton('my-button-second')">Click me</button>
+</div>
+<script src="script.js"></script>
 </body>
 </html>
